# spheral

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .hgignore  .readthedocs.yml  .uberenv_config.json  CMakeBasics.cmake  CMakeLists.txt  Dockerfile  FractalGravity.cc  FractalGravity.hh  LICENSE  Legal.txt  License.txt  NEWS  NOTICE  README.md  RELEASE_NOTES.md  add_buffer_values.cc  add_pseudo_particles.cc  assign_density.cc  azure-pipelines.yml  balance_by_particles.cc  branch_aneos_fix.md  buffer_points.cc  candidate_points.cc  check_for_edge_trouble.cc  classes.hh  clean_up.cc  config-build  cosmos_power.cc  daughter_group_nina.cc  dump_tree.cc  file_class.cc  file_class.hh  findPointByPos.cc  force_at_particle.cc  force_at_particle_sharp.cc  force_at_point.cc  (+57 more)
docs/: CMakeLists.txt  Developer_Workflow.rst  Development_Documentation.rst  building.rst  conf.py  conf.py.in  index.rst  intro.rst  quickstart.rst  requirements.txt
docs/developer/: design_docs.rst  development_docs.rst
docs/intro/: introduction.rst.inc
docs/legacy/: Manual.tex  example.py
docs/user/: cmake_config.rst
docs/user_guide/: index.rst  user_docs.rst
scripts/: CMakeLists.txt  atstest.in  build-requirements.txt  docs-requirements.txt  lcatstest.in  runtime-requirements.txt  runtime-requirements.txt.in  spheral-env.in  spheral-setup-venv.in  spheral-spack-setup-venv.in  spheral-spack-setup-venv.sh  spheral_ats.py  spheral_ats.py.in  spheralutils.py
scripts/devtools/: host-config-build.py  make_release_tarball.sh  performance_analysis.py  spec-list.json  tpl-manager.py  update-mirror.py  valgrind_python_suppression
scripts/gitlab/: build_and_install.py  build_and_install.sh  build_and_test.sh  clean_spheral_builds.sh  performance_analysis.py  performance_analysis.py.in  report_results.py  run_ats.py
scripts/lc/: generate-buildcache.sh  install-from-dev-pkg.sh  lcats  modulefile-template.lua  plot_hist_data.py
scripts/lc-builds/: blueos_gcc8.3.1-debug-mpi-python.sh  blueos_gcc8.3.1-debug-seq-python.sh  blueos_gcc8.3.1-release-mpi-cxx.sh  blueos_gcc8.3.1-release-mpi-python.sh  blueos_gcc8.3.1-release-seq-cxx.sh  blueos_gcc8.3.1-release-seq-python-cuda.sh  blueos_gcc8.3.1-release-seq-python.sh  blueos_gcc8.3.1-release-tpl-only.sh  blueos_nvcc11.1.0-gcc8.3.1-debug-seq-python.sh  blueos_nvcc11.1.0-gcc8.3.1-release-seq-python.sh  blueos_nvcc11.1.0-gcc8.3.1-release-tpl-only.sh  blueos_xl2021.03.11-release-seq-cxx.sh  toss3_clang9-debug-mpi-cxx.sh  toss3_clang9-debug-mpi-python.sh  toss3_clang9-debug-seq-cxx.sh  toss3_clang9-debug-seq-python.sh  toss3_clang9-release-mpi-cxx.sh  toss3_clang9-release-mpi-python.sh  toss3_clang9-release-seq-cxx.sh  toss3_clang9-release-seq-python.sh  toss3_clang9-release-tpl-only.sh  toss3_gcc8.1.0-debug-mpi-cxx.sh  toss3_gcc8.1.0-debug-mpi-python.sh  toss3_gcc8.1.0-release-mpi-cxx.sh  toss3_gcc8.1.0-release-mpi-python.sh  toss3_gcc8.1.0-release-tpl-only.sh  toss3_gcc8.3.1-debug-mpi-cxx.sh  toss3_gcc8.3.1-debug-mpi-python.sh  toss3_gcc8.3.1-debug-seq-cxx.sh  toss3_gcc8.3.1-debug-seq-python.sh  toss3_gcc8.3.1-release-mpi-cxx.sh  toss3_gcc8.3.1-release-mpi-python.sh  toss3_gcc8.3.1-release-seq-cxx.sh  toss3_gcc8.3.1-release-seq-python.sh  toss3_gcc8.3.1-release-tpl-only.sh  toss3_intel18.0.2-release-mpi-python.sh  toss3_intel18.0.2-release-tpl-only.sh  toss3_intel19.0.4-release-mpi-cxx.sh  toss3_intel19.0.4-release-mpi-python.sh
scripts/performance/: CMakeLists.txt  caliper.config  compare_times.py  performance.py.in  perftest.in  test_list.yaml
scripts/spack/: repo.yaml
src/: CMakeBasics.cmake  CMakeLists.txt  boot  build_sph  config.hh.in  configure.ac  configure.in  makefile.ac  makefile.in  spheral.doxygen  spheralCXX.cc
src/ArtificialConduction/: ArtificialConduction.cc  ArtificialConduction.hh  ArtificialConductionDecl.hh  ArtificialConductionImpl.hh  ArtificialConductionInst.cc  ArtificialConductionInst.cc.py  ArtificialConductionPolicy.cc  ArtificialConductionPolicy.hh  ArtificialConductionPolicyDecl.hh  ArtificialConductionPolicyImpl.hh  ArtificialConductionPolicyInst.cc  ArtificialConductionPolicyInst.cc.py  CMakeLists.txt  makefile  makefile.in
src/ArtificialViscosity/: ArtificialViscosity.cc  ArtificialViscosity.hh  ArtificialViscosityHandle.cc  ArtificialViscosityHandle.hh  ArtificialViscosityHandleInline.hh  ArtificialViscosityHandleInst.cc.py  ArtificialViscosityInline.hh  ArtificialViscosityInst.cc  ArtificialViscosityInst.cc.py  ArtificialViscosityList.cc  ArtificialViscosityList.hh  CMakeLists.txt  CRKSPHMonaghanGingoldViscosity.cc  CRKSPHMonaghanGingoldViscosity.hh  CRKSPHMonaghanGingoldViscosityInst.cc  CRKSPHMonaghanGingoldViscosityInst.cc.py  CRKSPHMonaghanGingoldViscosityRZ.cc  CRKSPHMonaghanGingoldViscosityRZ.hh  CSPHMonaghanGingoldViscosity.cc  CSPHMonaghanGingoldViscosity.hh  CSPHMonaghanGingoldViscosityInst.cc  CheapVonNeumanViscosity.cc  CheapVonNeumanViscosity.hh  CullenDehnenViscosity.cc  CullenDehnenViscosity.hh  CullenDehnenViscosityInline.hh  CullenDehnenViscosityInst.cc  CullenDehnenViscosityInst.cc.py  FiniteVolumeViscosity.cc  FiniteVolumeViscosity.hh  FiniteVolumeViscosityInst.cc  FiniteVolumeViscosityInst.cc.py  GradPressureViscosity.cc  GradPressureViscosity.hh  IncrementCullenMultipliers.cc  IncrementCullenMultipliers.hh  IncrementCullenMultipliersInst.cc  IncrementCullenMultipliersInst.cc.py  LimitedMonaghanGingoldViscosity.cc  LimitedMonaghanGingoldViscosity.hh  (+50 more)
src/BPLWraps/: DataNameTraits.hh  SuffixTraits.hh  fakeboost.hh  getSetItem.hh  iteratorsAsList.hh  makefile.in  printObject.hh  wrapAttr.hh
src/Boundary/: AxialSymmetryBoundary.cc  AxialSymmetryBoundary.hh  AxisBoundaryRZ.cc  AxisBoundaryRZ.hh  Boundary.cc  Boundary.hh  BoundaryInline.hh  BoundaryInst.cc  BoundaryInst.cc.py  CMakeLists.txt  CRKSPHVoidBoundary.cc  CRKSPHVoidBoundary.hh  CRKSPHVoidBoundaryInst.cc  CRKSPHVoidBoundaryInst.cc.py  ConstantBoundary.cc  ConstantBoundary.hh  ConstantBoundaryInline.hh  ConstantBoundaryInst.cc  ConstantBoundaryInst.cc.py  ConstantBoundaryUtilities.hh  ConstantRVelocityBoundary.cc  ConstantRVelocityBoundary.hh  (+76 more)
(+6402 files in other folders)
